--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <p>福岡市は美しい自然と伝統的な文化が融合する素晴らしい街です。</p>
         <img src="./img/fukuoka.png" alt="福岡市の魅力" width="300" height="300">
         <p>福岡市は美味しい食べ物や観光スポットがたくさんあります。</p>
-        <p>ぜひ訪れてみてください！</p>
+        <p>ぜひ訪れてみてください</p>
     </div>
 </body>
